@@ -226,6 +226,8 @@ hextorio-base-trade-prod-gleba=[planet=gleba] Trade Productivity
 hextorio-base-trade-prod-aquilo=[planet=aquilo] Trade Productivity
 hextorio-increment-trade-quality=Increment Trade Quality
 hextorio-default-trade-quality=Default Trade Quality
+hextorio-item-buff-cost-scale=Item Buff Cost Scale
+hextorio-item-buff-cost-base=Item Buff Cost Base
 
 [mod-setting-description]
 hextorio-claimed-hex-tile=The tile used to pave over claimed hexes.
@@ -343,6 +345,8 @@ hextorio-base-trade-prod-gleba=Trade productivity modifier on [planet=gleba].
 hextorio-base-trade-prod-aquilo=Trade productivity modifier on [planet=aquilo].
 hextorio-increment-trade-quality=Upon upgrading a hex core's quality, automatically set the upper bound of each trade's qualities to match the hex core's quality.
 hextorio-default-trade-quality=Upon claiming a hex core, the quality bounds for each trade are set to this range of values. All quality bounds are [color=green]configurable[.color] regardless of this setting's value.
+hextorio-item-buff-cost-scale=The multiplier of the item's value that is used as the cost for unlocking that item's buffs in the catalog.
+hextorio-item-buff-cost-base=The base of exponentiation used to scale the value beyond the unlock cost to obtain the enhancement cost of an item's buffs.\n\nSmall changes to this number from the default value strongly affects the balancing of the game.
 
 [string-mod-setting]
 hextorio-grid-rotation-mode-nauvis-random=Random
@@ -486,6 +490,7 @@ negative-prod-meaning=Negative productivity means\nsometimes the trade doesn't o
 obfuscated-text=???
 item-buff-unlock-tooltip=Unlock this item's unique buff
 item-buff-enhance-tooltip=Enhance
+item-buff-enhance-all-tooltip=Purchase all affordable enhancements, getting the cheapest ones first. Will unlock new buffs if possible.
 
 [quantum-bazaar]
 sell-in-hand-header=Sell in Hand
