@@ -6,3 +6,4 @@ require "settings.trades"
 require "settings.item_ranks"
 require "settings.misc"
 require "settings.notifications"
+require "settings.item_buffs"
